# QTProject

./: .gitignore  CMakeLists.txt  QT_DVPL_Tool.pro  Unpack.cpp  Unpack.h  UpackGameResource.pro  crc32.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
UnpackDvpl/: ActionDecode.cpp  ActionDecode.h  ActionEncode.cpp  ActionEncode.h  CMakeLists.txt  Dvpl.cpp  Dvpl.h  DvplData.cpp  DvplData.h  DvplSign.cpp  DvplSign.h  MassDvplTool.cpp  MassDvplTool.h  PacketUnpack.ui  Unpack.cpp  Unpack.h  UnpackDvpl.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/lz4-lite/: crc32.h  lz4-lite.h
libs/: CMakeLists.txt
libs/lz4/: lz4.pro
libs/lz4-lite/: CMakeLists.txt
libs/lz4-lite/src/: lz4-lite.c
libs/lz4/include/: crc32.h
libs/lz4/src/: lz4.c
